recomendable crear primero el repositorio en GitHub y luego en la computadora

--- a/respaldoGitHub.ipynb
+++ b/respaldoGitHub.ipynb
@@ -4,98 +4,102 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Pasos para respaldar tu proyecto en GitHub\n",
+    "# Pasos para iniciar y respaldar tu proyecto en GitHub\n",
     "\n",
     "## Configuración inicial\n",
     "\n",
-    "1. Crear una carpeta en tu computadora (ejemplo: `C:\\PythonCourse`).\n",
-    "2. Abrir Visual Studio Code (VSC).\n",
-    "3. En VSC, abrir la carpeta creada.\n",
-    "4. Abrir una terminal en VSC.\n",
-    "5. Inicializar un repositorio Git local:\n",
-    "   ```\n",
-    "   git init\n",
-    "   ```\n",
-    "6. Crear un nuevo repositorio en GitHub:\n",
+    "1. Crear un nuevo repositorio en GitHub:\n",
     "   - Ir a https://github.com/new\n",
     "   - Nombrar el repositorio (ejemplo: 'Python')\n",
     "   - Agregar descripción (opcional)\n",
     "   - Seleccionar 'Public' o 'Private'\n",
-    "   - Marcar 'Add a README file'\n",
-    "   - Elegir 'MIT License'\n",
+    "   - NO marcar 'Add a README file' ni elegir una licencia ahora\n",
     "   - Clic en 'Create repository'\n",
     "\n",
-    "## Conectar y sincronizar con GitHub\n",
+    "2. Crear una carpeta en tu computadora (ejemplo: `C:\\PythonCourse`).\n",
     "\n",
-    "7. Conectar repositorio local con remoto:\n",
-    "   ```\n",
-    "   git remote add origin https://github.com/franperezec/Python.git\n",
-    "   ```\n",
+    "3. Abrir Visual Studio Code (VSC).\n",
     "\n",
-    "8. Verificar conexión:\n",
-    "   ```\n",
-    "   git remote -v\n",
-    "   ```\n",
+    "4. En VSC, abrir la carpeta creada.\n",
     "\n",
-    "9. Obtener cambios del repositorio remoto:\n",
+    "5. Abrir una terminal en VSC.\n",
+    "\n",
+    "6. Inicializar el repositorio y conectarlo a GitHub:\n",
     "   ```\n",
-    "   git pull origin main --allow-unrelated-histories\n",
+    "   git init\n",
+    "   git remote add origin https://github.com/tu-usuario/tu-repositorio.git\n",
     "   ```\n",
     "\n",
-    "10. Resolver conflictos si es necesario.\n",
+    "7. Crear un archivo README.md:\n",
+    "   ```\n",
+    "   echo \"# Nombre del Proyecto\" > README.md\n",
+    "   echo \"\\nDescripción breve del proyecto.\" >> README.md\n",
+    "   ```\n",
     "\n",
-    "## Respaldar cambios\n",
+    "8. Crear un archivo de licencia (ejemplo con MIT License):\n",
+    "   ```\n",
+    "   curl https://raw.githubusercontent.com/licenses/license-templates/master/templates/mit.txt > LICENSE\n",
+    "   ```\n",
+    "   (Si `curl` no está disponible, puedes crear el archivo manualmente y copiar el texto de la licencia MIT desde el sitio web oficial)\n",
     "\n",
-    "11. Crear o modificar archivos en la carpeta local.\n",
+    "9. Preparar los archivos iniciales:\n",
+    "   ```\n",
+    "   git add .\n",
+    "   ```\n",
     "\n",
-    "12. Agregar cambios al área de preparación:\n",
+    "10. Hacer el primer commit:\n",
     "    ```\n",
-    "    git add .\n",
+    "    git commit -m \"Commit inicial: README y LICENSE\"\n",
     "    ```\n",
     "\n",
-    "13. Hacer commit:\n",
+    "11. Establecer la rama principal como 'main':\n",
     "    ```\n",
-    "    git commit -m \"Descripción de los cambios\"\n",
+    "    git branch -M main\n",
     "    ```\n",
     "\n",
-    "14. Subir cambios a GitHub:\n",
+    "12. Subir los cambios a GitHub:\n",
     "    ```\n",
-    "    git push origin main\n",
+    "    git push -u origin main\n",
     "    ```\n",
     "\n",
     "## Flujo de trabajo continuo\n",
     "\n",
-    "Repetir pasos 11-14 para futuros respaldos.\n",
+    "13. Crear o modificar archivos en la carpeta local.\n",
     "\n",
-    "Recuerda: Haz commits frecuentes con mensajes descriptivos."
+    "14. Agregar cambios al área de preparación:\n",
+    "    ```\n",
+    "    git add .\n",
+    "    ```\n",
+    "\n",
+    "15. Hacer commit:\n",
+    "    ```\n",
+    "    git commit -m \"Descripción de los cambios\"\n",
+    "    ```\n",
+    "\n",
+    "16. Subir cambios a GitHub:\n",
+    "    ```\n",
+    "    git push\n",
+    "    ```\n",
+    "\n",
+    "Repetir pasos 13-16 para futuros respaldos.\n",
+    "\n",
+    "## Notas importantes:\n",
+    "\n",
+    "- Después de ejecutar `git push -u origin main` la primera vez, en futuros pushes puedes usar simplemente `git push`. El flag `-u` establece la rama `main` local para que haga seguimiento de `origin/main`.\n",
+    "\n",
+    "- El contenido del README.md y LICENSE puede ser editado después en VSCode para personalizarlo según las necesidades de tu proyecto.\n",
+    "\n",
+    "- Si prefieres crear y editar estos archivos manualmente en VSCode, puedes omitir los comandos de `echo` y `curl`, y simplemente crear los archivos a través de la interfaz de VSCode.\n",
+    "\n",
+    "## Buenas prácticas\n",
+    "\n",
+    "- Haz commits frecuentes con mensajes descriptivos.\n",
+    "- Antes de comenzar a trabajar, siempre haz un `git pull` para obtener los últimos cambios.\n",
+    "- Usa ramas para desarrollar nuevas características: `git checkout -b nombre-rama`.\n",
+    "- Considera usar Pull Requests en GitHub para revisar cambios antes de fusionarlos en 'main'.\n",
+    "\n",
+    "Esta versión actualizada incluye los pasos para crear README y LICENSE, y clarifica que puedes usar `git push` sin argumentos después de la configuración inicial."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "4"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "2+2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
