funciones,estructuras de datos y principios de programación orientada a objetos en Python

--- a/04_Funciones/04_Funciones.ipynb
+++ b/04_Funciones/04_Funciones.ipynb
@@ -550,7 +550,87 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "## **Identificación de Palíndromos en Python**\n",
+    "\n",
+    "### **¿Qué es un Palíndromo?**\n",
+    "\n",
+    "Un palíndromo es una palabra, frase o secuencia que se lee igual de izquierda a derecha que de derecha a izquierda, ignorando espacios, puntuación y mayúsculas. Ejemplos comunes incluyen \"Anita lava la tina\" y \"Reconocer\".\n",
+    "\n",
+    "### **Enfoque 1: Uso de Slicing para Verificar Palíndromos**\n",
+    "\n",
+    "Una forma sencilla y eficiente de verificar si un texto es un palíndromo en Python es utilizando **slicing**. Este método permite invertir la cadena de texto de manera rápida y compararla con la original.\n",
+    "\n",
+    "```python\n",
+    "def es_palin(texto):\n",
+    "    texto = texto.replace(\" \", \"\").lower()  # Eliminar espacios y convertir a minúsculas\n",
+    "    return texto == texto[::-1]  # Comparar el texto original con su versión invertida\n",
+    "\n",
+    "print(es_palin(\"Anita lava la tina\"))  # True\n",
+    "print(es_palin(\"Hola mundo\"))  # False\n",
+    "print(es_palin(\"amo la paloma\"))  # True\n",
+    "print(es_palin(\"Reconocer\"))  # True\n",
+    "```\n",
+    "\n",
+    "**Explicación:**\n",
+    "\n",
+    "- **`texto.replace(\" \", \"\").lower()`:** Elimina los espacios en blanco y convierte todo el texto a minúsculas para asegurar una comparación precisa.\n",
+    "- **`texto[::-1]`:** Utiliza slicing para invertir la cadena.\n",
+    "- **Comparación:** Se compara el texto original (sin espacios y en minúsculas) con su versión invertida. Si son iguales, el texto es un palíndromo.\n",
+    "\n",
+    "### **Enfoque 2: Verificación Manual con Funciones**\n",
+    "\n",
+    "Otra forma de verificar si un texto es un palíndromo es utilizando funciones para eliminar los espacios y para invertir el texto manualmente.\n",
+    "\n",
+    "1. **Eliminar Espacios:**\n",
+    "\n",
+    "```python\n",
+    "def no_espacios(texto):\n",
+    "    nuevo_texto = \"\"\n",
+    "    for char in texto:\n",
+    "        if char != \" \":\n",
+    "            nuevo_texto += char\n",
+    "    return nuevo_texto\n",
+    "```\n",
+    "\n",
+    "- **`no_espacios(texto)`:** Esta función recorre cada carácter del texto y agrega solo los caracteres que no son espacios a una nueva cadena, eliminando así todos los espacios en blanco.\n",
+    "\n",
+    "2. **Invertir el Texto:**\n",
+    "\n",
+    "```python\n",
+    "def reverse(texto):\n",
+    "    texto_al_reves = \"\"\n",
+    "    for char in texto:\n",
+    "        texto_al_reves = char + texto_al_reves\n",
+    "    return texto_al_reves\n",
+    "```\n",
+    "\n",
+    "- **`reverse(texto)`:** Esta función invierte el texto agregando cada carácter al principio de una nueva cadena.\n",
+    "\n",
+    "3. **Verificar Palíndromo:**\n",
+    "\n",
+    "```python\n",
+    "def es_palindromo(texto):\n",
+    "    texto = no_espacios(texto)  # Eliminar espacios\n",
+    "    texto_al_reves = reverse(texto)  # Invertir el texto\n",
+    "    print(texto)  # Mostrar el texto sin espacios\n",
+    "    print(texto_al_reves)  # Mostrar el texto invertido\n",
+    "    return texto.lower() == texto_al_reves.lower()  # Comparar sin distinguir mayúsculas\n",
+    "\n",
+    "print(es_palindromo(\"Anita lava la tina\"))  # True\n",
+    "print(es_palindromo(\"Hola mundo\"))  # False\n",
+    "print(es_palindromo(\"amo la paloma\"))  # True\n",
+    "print(es_palindromo(\"Reconocer\"))  # True\n",
+    "```\n",
+    "\n",
+    "**Explicación:**\n",
+    "\n",
+    "- **`es_palindromo(texto)`:** Combina las dos funciones anteriores (`no_espacios` y `reverse`) para eliminar los espacios y luego invertir el texto. Finalmente, compara el texto original (sin espacios) con su versión invertida para determinar si es un palíndromo.\n",
+    "\n",
+    "### **Conclusión**\n",
+    "\n",
+    "Existen diferentes enfoques para identificar palíndromos en Python. El uso de slicing es una manera eficiente y directa, mientras que el enfoque manual con funciones proporciona más control y puede ser más didáctico para comprender cómo se procesa el texto internamente. Ambos métodos son válidos y útiles dependiendo del contexto y las necesidades del programador."
+   ]
   }
  ],
  "metadata": {
